tests/idris2/builtin/builtin006/expected
1/1: Building Test (Test.idr)
Error: Non-erased argument is not a 'Nat'-like type.

Test:9:1--9:35
 5 | natToInt : MyNat -> Integer
 6 | natToInt Z = 0
 7 | natToInt (S k _) = 1 + natToInt k
 8 | 
 9 | %builtin NaturalToInteger natToInt
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Main> Bye for now!
